err/soma-base.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/soma'...
Listing './lib/python3.5/site-packages/soma/controller'...
Listing './lib/python3.5/site-packages/soma/controller/tests'...
Listing './lib/python3.5/site-packages/soma/minf'...
Listing './lib/python3.5/site-packages/soma/minf/tests'...
Listing './lib/python3.5/site-packages/soma/pipeline'...
Listing './lib/python3.5/site-packages/soma/plugins'...
Listing './lib/python3.5/site-packages/soma/qt_gui'...
Listing './lib/python3.5/site-packages/soma/qt_gui/controls'...
Compiling './lib/python3.5/site-packages/soma/qt_gui/generic_table_editor.py'...
***   File "./lib/python3.5/site-packages/soma/qt_gui/generic_table_editor.py", line 296
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/soma/qt_gui/test'...
Listing './lib/python3.5/site-packages/soma/sandbox'...
Listing './lib/python3.5/site-packages/soma/test_utils'...
Listing './lib/python3.5/site-packages/soma/tests'...
Listing './lib/python3.5/site-packages/soma/utils'...
Listing './lib/python3.5/site-packages/soma_base-4.6.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
